THRIFT-391. py: Fix memory leak in fastbinary

Author: Alexander Shigin

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@757634 13f79535-47bb-0310-9956-ffa450edef68